<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>inertiallabs_ins</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="frosha@todo.todo">frosha</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

<?xml version="1.0"?>
<package format="2">
  <name>inertiallabs_ins</name>
  <version>1.0.0</version>
  <description>The Inertial Labs INS package</description>

  <maintainer email="omprakashpatro@gmail.com">Omprakash Patra</maintainer>
  <url type="website">http://example.com</url>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>action_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <!--<depend>inertiallabs_msgs</depend>-->

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <!-- <exec_depend>inertiallabs_msgs</exec_depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
